# ptgrey_bfly_camera

./: CMakeLists.txt  LICENSE  README.md  package.xml
calibration/: calibration_data_00_debug.yaml  calibration_data_01.yaml
cfg/: ptgrey_bfly_camera_params.cfg
config/: ptgrey_bfly_camera_params.yaml
launch/: calibration.launch  ptgrey_bfly_camera.launch
rviz/: ptgrey_bfly_camera.rviz
src/: bfly_camera.cpp  bfly_camera.h  bfly_camera_node.cpp  bfly_camera_node.h  bfly_camera_node_main.cpp
src/examples/: CMakeLists.txt  bfly_camera_client_main.cpp  bfly_capture_main.cpp
srv/: ImageAsService.srv
