<?xml version="1.0"?>
<package>
  <name>ptgrey_bfly_camera</name>
    <version>0.0.0</version>
    <description>
       Driver of Point Grey's Black Fly camera. Camera image acquisition can be configured as as a publisher or as a service. 
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <maintainer email="andreu@beta-robots.com">Andreu Corominas-Murtra</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>BSD 3-Clause License</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">https://github.com/beta-robots/ptgrey_bfly_camera</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <author email="andreu@beta-robots.com">Andreu Corominas-Murtra</author>

    <!-- The *_depend tags are used to specify dependencies: they can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>      
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>   
    <build_depend>image_geometry</build_depend>   
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend> 
    <run_depend>rosconsole</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>   
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>cv_bridge</run_depend>    
    <run_depend>image_geometry</run_depend>   

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>